--- a/my-web/package.json
+++ b/my-web/package.json
@@ -49,6 +49,7 @@
     "react": "^19.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.69.0",
     "react-is": "^19.2.3",
     "react-resizable-panels": "^2.1.9",
